[workspace]
members = ["godot_traits", "rust_classes", "utils", "."]

[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
godot_traits = { path = "./godot_traits" }
utils = { path = "./utils" }
rust_classes = { path = "./rust_classes" }
